--- a/mongodb/src/main/resources/application.yml
+++ b/mongodb/src/main/resources/application.yml
@@ -6,3 +6,17 @@ spring:
     mongodb:
       uri: mongodb://192.168.0.83:27017/mongodb
 
+  application:
+    name: @artifactId@
+  cloud:
+    nacos:
+      discovery:
+        server-addr: ${NACOS_HOST:alone-gateway}:${NACOS_HOST:8848}
+      config:
+        server-addr: ${spring.cloud.nacos.server-addr}
+        file-extension: yml
+        shared-configs:
+          - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+  profiles:
+    active: @profiles.active@
+
